Fixed z-index of scrollbars

--- a/app.css
+++ b/app.css
@@ -6,12 +6,12 @@
 }
 
 ::-webkit-scrollbar {
-    height: 7px;
-    width: 7px;
+    height: 6px;
+    width: 6px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color : #ddd;
+    background-color : white;
     border-radius: 2px;
     -webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.3); 
 }
@@ -58,6 +58,7 @@ select {
     height: 496px;
     margin: 8px;
     width: 496px;
+    z-index: 1;
 }
 
 .actions {
